[project]
name = "nqtaskqueue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Navy Xie", email = "navy.xie@icloud.com" }
]
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "flower>=2.0.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "poethepoet>=0.36.0",
    "ruff>=0.12.3",
]

[project.scripts]
nqtaskqueue = "nqtaskqueue.cli:main"

# [[tool.uv.index]]
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"
# default = true

[tool.ruff]
line-length = 80
fix = true
show-fixes = true
exclude = ["experiments"]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
check = ["lint", "format"]

run-task = "nqtaskqueue run-task"
celery = """celery -A nqtaskqueue.celery worker \
        -Q nqtaskqueue \
        --concurrency=2 \
        --logfile="./logs/%n%I.log" \
        --loglevel=info"""
flower = "celery flower --port=5555 --broker=file://src/nqtaskqueue/data/broker/in"
